--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,7 @@
       <form action="#" method="POST" class="space-y-4">
         <input type="text" name="name" placeholder="Your Name" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
         <input type="email" name="email" placeholder="Your Email" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
+        <input type="text" name="subject" placeholder="Subject" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
         <textarea name="message" rows="5" placeholder="Your Message" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"></textarea>
         <button type="submit" class="w-full py-3 bg-cyan-800 text-white font-semibold rounded-lg hover:bg-yellow-400 hover:text-cyan-900 transition duration-300">Send Message</button>
       </form>
