--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
     <!-- Contact Form -->
     <div>
       <h3 class="text-2xl font-semibold text-cyan-900 mb-4">Send Us a Message</h3>
-      <form action="#" method="POST" class="space-y-4">
+      <form action="#" method="POST" class="space-y-4" id="contactForm">
         <input type="text" name="name" placeholder="Your Name" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
         <input type="email" name="email" placeholder="Your Email" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
         <input type="text" name="subject" placeholder="Subject" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
@@ -84,6 +84,41 @@
       navLinks.classList.toggle('hidden');
     });
   </script>
+
+  <script>
+  const contactForm = document.getElementById('contactForm');
+
+  contactForm.addEventListener('submit', function (e) {
+    e.preventDefault();
+
+    const data = {
+      name: contactForm.elements['name'].value,
+      email: contactForm.elements['email'].value,
+      message: contactForm.elements['message'].value
+    };
+
+    fetch('https://script.google.com/macros/s/AKfycbyGpyF-wpHRfgqFdieG-2tUvCf3bD4jrLjHGwSmkxNudspd7ufudTmvPuQPCqFy2w7c/exec', {
+      method: 'POST',
+      body: JSON.stringify(data),
+      headers: {
+        'Content-Type': 'application/json'
+      }
+    })
+    .then(response => response.text())
+    .then(text => {
+      if (text === 'Success') {
+        alert('Message sent successfully!');
+        contactForm.reset();
+      } else {
+        alert('Something went wrong. Please try again.');
+      }
+    })
+    .catch(error => {
+      console.error('Error:', error);
+      alert('Something went wrong.');
+    });
+  });
+</script>
 
 </body>
 
