--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,7 @@
     const data = {
       name: contactForm.elements['name'].value,
       email: contactForm.elements['email'].value,
+      subject: contactForm.elements['subject'].value,
       message: contactForm.elements['message'].value
     };
 
