--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
   <script>
   const form = document.getElementById('contactForm');
 
-  contactForm.addEventListener('submit', function (e) {
+  form.addEventListener('submit', function (e) {
     e.preventDefault();
 
     const formData = {
