--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
       <h3 class="text-2xl font-semibold text-cyan-900 mb-4">Contact Information</h3>
       <p class="mb-2 text-gray-700"><span class="font-semibold">Instagram:</span> <a class="text-cyan-700 hover:underline" href="https://www.instagram.com/vitiligo_tanzania?igsh=MXBibXp4OXViaDk0cQ%3D%3D&utm_source=qr">Vitiligo_tanzania</a></p>
       <p class="mb-2 text-gray-700"><span class="font-semibold">Whatsapp Channel:</span> <a class="text-cyan-700 hover:underline" href="https://whatsapp.com/channel/0029Vb5vjT13gvWZPVf4XM3d">AfroResilience Trust</a></p>
-      <p class="mb-2 text-gray-700"><span class="font-semibold">Email:</span> resilience@africa.org</p>
+      <p class="mb-2 text-gray-700"><span class="font-semibold">Email:</span>  saidkinolo46@gmail.com</p>
       <p class="mb-2 text-gray-700"><span class="font-semibold">Phone:</span> +255 688271007, +234 7083619244</p>
       <p class="mb-2 text-gray-700"><span class="font-semibold">Location:</span> Tanzania, Nigeria, India</p>
     </div>
