--- a/donate.html
+++ b/donate.html
@@ -60,14 +60,20 @@
 
     <div class="grid sm:grid-cols-2 gap-8 mb-10">
       <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-emerald-700 mb-2">M-Pesa</h3>
-        <p class="text-gray-700 font-medium">+255 688 271 007</p>
-        <p class="text-gray-500">Name: Said Mwenjuma</p>
+<h3 class="text-xl font-semibold text-emerald-700 mb-2">M-Pesa</h3>
+<p class="text-gray-700 font-medium">
+  <a href="tel:+255749848264" class="text-blue-600 underline hover:text-blue-800">
+    +255 749 848 264
+  </a>
+</p>
       </div>
       <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-emerald-700 mb-2">Airtel Money</h3>
-        <p class="text-gray-700 font-medium">+234 708 361 9244</p>
-        <p class="text-gray-500">Name: Anthony Geria</p>
+<h3 class="text-xl font-semibold text-emerald-700 mb-2">Airtel Money</h3>
+<p class="text-gray-700 font-medium">
+  <a href="tel:+255688271007" class="text-blue-600 underline hover:text-blue-800">
+    +255 688 271 007
+  </a>
+</p>
       </div>
     </div>
 
