--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
             </div>
             <div
                 class="bg-white rounded-xl shadow-md p-6 w-72 text-center transform hover:scale-105 transition duration-300">
-                <img src="images/8547821548.jpg" alt="Anthony Geria"
+                <img src="images/8547821548.jpg" alt="Anthony Taiwo"
                     class="w-32 h-32 object-cover rounded-full mx-auto mb-4">
-                <p class="font-semibold text-lg text-gray-800">Anthony Geria</p>
+                <p class="font-semibold text-lg text-gray-800">Anthony Taiwo</p>
                 <p class="text-sm text-gray-500">Nigeria</p>
             </div>
         </div>
