--- a/contact.html
+++ b/contact.html
@@ -28,26 +28,26 @@
   </header>
 
   <!-- NAVBAR with toggle -->
-  <nav class="bg-cyan-800 text-white px-4 py-4 shadow-sm">
-    <div class="max-w-7xl mx-auto flex justify-between items-center">
-      <div class="text-lg font-semibold md:hidden">Menu</div>
-      <button id="menu-toggle" class="md:hidden focus:outline-none">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-        </svg>
-      </button>
-    </div>
-    <div id="nav-links" class="flex-col md:flex md:flex-row md:justify-center gap-5 text-sm font-medium mt-4 md:mt-0 hidden md:flex">
-      <a href="index.html" class="hover:text-yellow-200 transition px-3 py-2">Home</a>
-      <a href="about.html" class="hover:text-yellow-200 transition px-3 py-2">About</a>
-      <a href="gallery.html" class="hover:text-yellow-200 transition px-3 py-2">Gallery</a>
-      <a href="blog.html" class="hover:text-yellow-200 transition px-3 py-2">Blog</a>
-      <a href="volunteer.html" class="hover:text-yellow-200 transition px-3 py-2">Volunteer</a>
-      <a href="contact.html" class="text-yellow-300 underline px-3 py-2">Contact</a>
-      <a href="donate.html" class="hover:text-yellow-200 transition px-3 py-2">Donate</a>
-      <a href="testimonials.html" class="hover:text-yellow-200 transition">Testimonials</a>
-    </div>
-  </nav>
+    <nav class="bg-cyan-800 text-white px-4 py-4 shadow-sm">
+        <div class="max-w-7xl mx-auto flex justify-between items-center">
+            <div class="text-lg font-semibold md:hidden">Menu</div>
+            <button id="menu-toggle" class="md:hidden focus:outline-none">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                </svg>
+            </button>
+        </div>
+        <div id="nav-links" class="flex-col md:flex md:flex-row md:justify-center gap-5 text-sm font-medium mt-4 md:mt-0 hidden md:flex">
+            <a href="index.html" class="hover:text-yellow-200 transition px-3 py-2">Home</a>
+            <a href="about.html" class="hover:text-yellow-200 transition px-3 py-2">About</a>
+            <a href="gallery.html" class="hover:text-yellow-200 transition px-3 py-2">Gallery</a>
+            <a href="blog.html" class="hover:text-yellow-200 transition px-3 py-2">Blog</a>
+            <a href="volunteer.html" class="hover:text-yellow-200 transition px-3 py-2">Volunteer</a>
+            <a href="contact.html" class="hover:text-yellow-200 transition px-3 py-2">Contact</a>
+            <a href="donate.html" class="hover:text-yellow-200 transition px-3 py-2">Donate</a>
+            <a href="testimonials.html" class="hover:text-yellow-200 transition px-3 py-2">Testimonials</a>
+        </div>
+    </nav>
 
   <!-- MAIN CONTENT -->
   <main class="max-w-6xl mx-auto px-4 py-12 grid md:grid-cols-2 gap-10">
