--- a/index.html
+++ b/index.html
@@ -94,29 +94,44 @@
         </div>
     </section>
 
-    <!-- Co-Founder Bio Section -->
-<section class="bg-white py-12 px-6 sm:px-12">
+<!-- Co-Founder Bio Section -->
+<section class="bg-slate-100 py-16 px-4">
   <div class="max-w-6xl mx-auto">
-    <h2 class="text-3xl font-bold text-cyan-900 mb-6 text-center">CO-FOUNDER of Afroresilience Trust: ARTIST BIOGRAPHY</h2>
-    
-    <div class="grid md:grid-cols-2 gap-8 items-center">
-      <div>
-        <img src="images/erinle-painting.jpg" alt="Erinle Anthony Painting" class="rounded-xl shadow-md">
-        <img src="images/erinle-portrait.jpg" alt="Erinle Anthony Portrait" class="rounded-xl shadow-md mt-4">
+    <h2 class="text-3xl sm:text-4xl font-bold text-center text-cyan-900 mb-10">
+      CO-FOUNDER of Afroresilience Trust: ARTIST BIOGRAPHY
+    </h2>
+    <div class="grid md:grid-cols-2 gap-10 items-start">
+      <!-- Images -->
+      <div class="space-y-6">
+        <img src="images/erinle-painting.jpg" alt="Erinle Anthony Painting"
+          class="w-full h-auto rounded-xl shadow-md">
+        <img src="images/erinle-portrait.jpg" alt="Erinle Anthony Portrait"
+          class="w-full h-auto rounded-xl shadow-md">
       </div>
-
-      <div>
-        <p class="text-gray-700 mb-4">
-          <strong>Erinle Anthony Taiwo</strong> is a visionary visual artist from Lagos, Nigeria, known for igniting meaningful conversations about identity, resilience, and the human experience. Through his unique blend of charcoal, acrylic, and coffee, Anthony's art challenges societal norms and fosters empathy, shedding light on crucial issues like Vitiligo Awareness and mental health.
+      <!-- Biography Text -->
+      <div class="bg-white rounded-xl shadow-md p-6 text-gray-700 leading-relaxed">
+        <p class="mb-4">
+          <strong>Erinle Anthony Taiwo</strong> is a visionary visual artist from Lagos, Nigeria, known for igniting
+          meaningful conversations about identity, resilience, and the human experience. Through his unique blend of
+          charcoal, acrylic, and coffee, Anthony's art challenges societal norms and fosters empathy, shedding light on
+          crucial issues like Vitiligo Awareness and mental health.
         </p>
-        <p class="text-gray-700 mb-4">
-          As an artist, Anthony draws inspiration from his personal experiences and the struggles of everyday people, using his platform to amplify the voices of those often unheard. He has collaborated with notable brands like ZeeVitiligo Nigeria and is currently under training with Art Class Lagos in collaboration with O'DA Art Gallery.
+        <p class="mb-4">
+          As an artist, Anthony draws inspiration from his personal experiences and the struggles of everyday people,
+          using his platform to amplify the voices of those often unheard. He has collaborated with notable brands like
+          ZeeVitiligo Nigeria and is currently under training with Art Class Lagos in collaboration with O'DA Art
+          Gallery.
         </p>
-        <p class="text-gray-700 mb-4">
-          Recent highlights include his participation in the <strong>Kongi Art Exhibition (2024)</strong> and <strong>Ogun State Live Painting Performance (Abeokuta, 2024)</strong>, as well as his solo exhibition, <strong>"Living Positively with Vitiligo"</strong>, which debuted on June 28th, 2025.
+        <p class="mb-4">
+          Recent highlights include his participation in the
+          <strong>Kongi Art Exhibition (2024)</strong> and <strong>Ogun State Live Painting Performance (Abeokuta,
+            2024)</strong>, as well as his solo exhibition, <strong>"Living Positively with Vitiligo"</strong>, which
+          debuted on June 28th, 2025.
         </p>
-        <p class="text-gray-700">
-          Through his art, Anthony aims to inspire others, promote understanding, and foster a sense of community. He believes that art has the power to transcend boundaries and connect people on a deeper level, and he invites viewers to join him on this journey of self-discovery and connection.
+        <p>
+          Through his art, Anthony aims to inspire others, promote understanding, and foster a sense of community. He
+          believes that art has the power to transcend boundaries and connect people on a deeper level, and he invites
+          viewers to join him on this journey of self-discovery and connection.
         </p>
       </div>
     </div>
